--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "file-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "winston": "^3.17.0"
   }
